# tree-consulting

./: README.md
my_first_agent/: README.md  report.md
my_first_agent/src/my_first_agent/: crew.py  main.py  output.py
powerpoint_helper/: .gitignore  README.md  builder_output.md  pyproject.toml  resarcher_output.md  scrapper_output.md  testing.ipynb  testing.md
powerpoint_helper/archive/result_0731/: builder_output.md  resarcher_output.md  scrapper_output.md
powerpoint_helper/db/: chroma.sqlite3
powerpoint_helper/knowledge/: user_preference.txt
powerpoint_helper/src/powerpoint_helper/: crew.py  main.py
powerpoint_helper/src/powerpoint_helper/config/: agents.yaml  tasks.yaml
powerpoint_helper/src/powerpoint_helper/tools/: calculator.py  calculator_tool.py  custom_tool.py
