[project]
name = "my_first_agent"
version = "0.1.0"
description = "my_first_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
my_first_agent = "my_first_agent.main:run"
run_crew = "my_first_agent.main:run"
train = "my_first_agent.main:train"
replay = "my_first_agent.main:replay"
test = "my_first_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
