[project]
name = "powerpoint_helper"
version = "0.1.0"
description = "Powerpoint helper using crewAI"
authors = [{ name = "David Gu", email = "neo.zheyuan@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
powerpoint_helper = "powerpoint_helper.main:run"
run_crew = "powerpoint_helper.main:run"
train = "powerpoint_helper.main:train"
replay = "powerpoint_helper.main:replay"
test = "powerpoint_helper.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
